objects/Api_Configuration__c.object
<CustomObject>
    <fields>
        <fullName>Endpoint_URL__c</fullName>
        <label>Endpoint URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Environment_Name__c</fullName>
        <label>Environment Name</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Password__c</fullName>
        <label>Password</label>
        <length>175</length>
        <maskChar>asterisk</maskChar>
        <maskType>all</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>UserName__c</fullName>
        <label>UserName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Api Configuration</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>A-{0000}</displayFormat>
        <label>Api Configuration Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Api Configurations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>